<resources>
    <string name="app_name">에어콕 패밀리</string>
    <string name="common_ok">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_good">좋음</string>
    <string name="common_bad">나쁨</string>
    <string name="common_dust">영유아 미세먼지 지수</string>
    <string name="common_dust_measure">미세먼지 측정값</string>
    <string name="common_dust_info">본데이터는 한국환경공단에서 제공하며\n현지사정에 따라 차이가 발생할 수 있습니다.</string>
    <string name="common_current_location">현재위치</string>
    <string name="common_interest">관심지역</string>
    <string name="common_out">실외</string>
    <string name="common_in">실내</string>
    <string name="common_device_con">기기연결하기</string>
    <string name="common_app_close">"\'뒤로\'버튼을 한번 더 누르시면 종료됩니다."</string>
    <string name="common_not_device_message">설정에서 기기를 연결하세요.</string>
    <string name="common_name">이름</string>
    <string name="common_birth">생년월일(ex. 19800101)</string>
    <string name="common_male">남자</string>
    <string name="common_female">여자</string>
    <string name="common_save">저장하기</string>
    <string name="common_complete">완료</string>
    <string name="common_delete">삭제</string>
    <string name="common_add">추가</string>
    <string name="common_yesterday">어제</string>
    <string name="common_today">오늘</string>
    <string name="common_tomorrow">내일</string>
    <string name="common_very">매우</string>
    <string name="common_no_location">위치정보가 없습니다</string>
    <string name="common_off_location_info">위치정보 기능이 꺼져있습니다.</string>
    <string name="common_main_pm25">미세먼지(PM2.5)지수</string>
    <string name="dust_state_0">좋음</string>
    <string name="dust_state_1">보통</string>
    <string name="dust_state_2">민감</string>
    <string name="dust_state_3">나쁨</string>
    <string name="dust_state_4">매우 나쁨</string>
    <string name="dust_state_comment_0">실외 활동 하는 것을 권장해요</string>
    <string name="dust_state_comment_1">실외 활동을 해도 안전해요</string>
    <string name="dust_state_comment_2">장시간 또는 무리한 실외활동을 자제하세요</string>
    <string name="dust_state_comment_3">실외로 노출 최소화하고 야외활동을 자제 하세요</string>
    <string name="dust_state_comment_4">실외 활동 금지</string>
    <string name="dust_status_0">생활하기에 쾌적한 환경이에요</string>
    <string name="dust_status_1">생활하기에 안전한 환경이에요</string>
    <string name="dust_status_2">장시간 또는 무리한 실외활동을\n자제하세요.</string>
    <string name="dust_status_3">실외로 노출 최소화하고\n야외활동을 자제 하세요.</string>
    <string name="dust_status_4">실외 활동 금지 합니다.\n실내로 신속하게 이동하세요.</string>
    <string name="network_alert_title_error">오류 알림.</string>
    <string name="network_alert_message_error">네트워크 통신중 오류가 발생하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="net_progress_message">잠시만 기다려주세요.</string>
    <string name="alert_permission_title">권한 설정</string>
    <string name="alert_permission_message">위치권한 설정이 꺼져있습니다.\nAIRCOK 서비스 이용이 가능하도록 설정을 변경하시겠습니까?</string>
    <string name="alert_location_title">위치정보 설정</string>
    <string name="alert_location_message">위치정보 기능이 꺼져있습니다.\nAIRCOK 서비스 이용이 가능하도록 설정을 변경하시겠습니까?</string>
    <string name="alert_ble_title">블루투스 설정</string>
    <string name="alert_ble_message">블루투스 기능이 꺼져있습니다.\nAIRCOK 서비스 이용이 가능하도록\n설정을 변경하시겠습니까?</string>
    <string name="alert_location_delete_title">관심지역 삭제</string>
    <string name="alert_location_delete_message">현재 설정된 관심지역을 삭제하시겠습니까?</string>
    <string name="alert_app_update_message">새로운 버전의 앱이 업데이트 되었습니다.\n더욱 원활한 서비스 제공을 위한 업데이트를 진행하세요.</string>
    <string name="alert_permission_storage_title">저장정보 설정</string>
    <string name="alert_permission_storage_message">저장권한 설정이 꺼져있습니다.\n공유하기 이용이 가능하도록 설정을 변경하시겠습니까?</string>
    <string name="location_search_title">관심지역 설정</string>
    <string name="location_search_edit_hint">동이름을 입력해 주세요.</string>
    <string name="select_location_title">지역선택</string>
    <string name="menu_title0">제품설명</string>
    <string name="menu_title1">미세먼지(PM2.5)지수?</string>
    <string name="menu_title2">모니터링</string>
    <string name="menu_title3">구매하기</string>
    <string name="menu_title4">환경설정</string>
    <string name="menu_title5">개인정보취급방침</string>
    <string name="menu_title6">사용자 정보 변경</string>
    <string name="dust_info_title">내아이지수(미세먼지지수) 소개</string>
    <string name="dust_info_des">실시간 측정되는 미세먼지(pm2.5)\n값을 활용한 환경-건강 영향 평가 지수 (i-EHS 지수)\n0에서 100 사이의 값을 가지며, 5단계 등급으로 구분됨</string>
    <string name="dust_info_state_title0">좋음</string>
    <string name="dust_info_state_title0_1">0 ~ 20</string>
    <string name="dust_info_state_title1">보통</string>
    <string name="dust_info_state_title1_1">21 ~ 40</string>
    <string name="dust_info_state_title2">민감군 영향</string>
    <string name="dust_info_state_title2_0">민감군\n영향</string>
    <string name="dust_info_state_title2_1">41 ~ 60</string>
    <string name="dust_info_state_title3">나쁨</string>
    <string name="dust_info_state_title3_1">61 ~ 80</string>
    <string name="dust_info_state_title4">매우나쁨</string>
    <string name="dust_info_state_title4_1">81 ~ 100</string>
    <string name="dust_info_state_des0">매우 쾌적한 상태\n민감군에게도 아무런 영향이 없는 매우 좋은 수준</string>
    <string name="dust_info_state_des1">쾌적한 상태\n민감군에게 영향이 없는 안전한 수준</string>
    <string name="dust_info_state_des2">불쾌감이 없는 상태\n일반인에게는 영향이 없지만, 민감군에게는 경미한\n영향을 줄 수 있는 수준</string>
    <string name="dust_info_state_des3">일부 불쾌감을 줄 수 있는 상태\n민감군에게 건강상 악영향을 줄 수 있는 수준</string>
    <string name="dust_info_state_des4">불쾌감을 주는 상태\n미세먼지로 인하여 심각한 악영향을 줄 수 있는 수준</string>
    <string name="dust_info_be_title">행동대응요령</string>
    <string name="dust_info_be_des0">1. 월령별 가중치 부여에 따른 특화된 면역력 예방 정보 제공</string>
    <string name="dust_info_be_des1">2. 실제 육아에 도움이 될 수 있는 실내외 각각의 맞춤형 행동대응요령 제공</string>
    <string name="terms_title0">1. 개인정보의 처리 목적</string>
    <string name="terms_title1">2. 개인정보처리 위탁</string>
    <string name="terms_des0"><![CDATA["<"]]>(주)이쓰리<![CDATA[">"]]>(‘아이마음s2’이하 ‘아이마음s2’) 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.</string>
    <string name="terms_des1">- 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른 본인 식별.인증, 회원자격 유지.관리, 물품 또는 서비스 공급에 따른 금액 결제, 물품 또는 서비스의 공급.배송 등</string>
    <string name="terms_des2">① <![CDATA["<"]]>(주)이쓰리<![CDATA[">"]]>(<![CDATA["'"]]>아이마음s2<![CDATA["'"]]>)은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.</string>
    <string name="terms_des3">② <![CDATA["<"]]>(주)이쓰리<![CDATA[">"]]>(<![CDATA["'"]]>아이마음s2<![CDATA["'"]]>이하 <![CDATA["'"]]>아이마음s2<![CDATA["'"]]>)은(는) 위탁계약 체결시 개인정보 보호법 제25조에 따라 위탁업무 수행목적 외 개인정보 처리 금지, 기술적.관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리.감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.</string>
    <string name="terms_text1">1. 개인정보의 처리 목적 <![CDATA["<"]]>(주)이쓰리>(\'www.aircok.com\'이하 \'에어콕\') 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다.\n\n- 고객 가입의사 확인, 고객에 대한 서비스 제공에 따른 본인 식별.인증, 회원자격 유지.관리, 물품 또는 서비스 공급에 따른 금액 결제, 물품 또는 서비스의 공급.배송 등</string>
    <string name="terms_text2">2. 개인정보처리 위탁\n\n① <![CDATA["<"]]>(주)이쓰리>(\'에어콕\')은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.\n\n② <![CDATA["<"]]>(주)이쓰리>(\'www.aircok.com\'이하 \'에어콕\')은(는) 위탁계약 체결시 개인정보 보호법 제25조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.\n\n③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체 없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.</string>
    <string name="terms_text3">3. 정보주체의 권리,의무 및 그 행사방법 이용자는 개인정보주체로서 다음과 같은 권리를 행사할 수 있습니다.\n\n① 정보주체는 <![CDATA["<"]]>(주)이쓰리>(\'www.aircok.com\'이하 \'에어콕\') 에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.\n1. 개인정보 열람요구\n2. 오류 등이 있을 경우 정정 요구\n3. 삭제요구\n4. 처리정지 요구</string>
    <string name="terms_text4">4. 처리하는 개인정보의 항목 작성\n\n① <![CDATA["<"]]>(주)이쓰리>(\'www.aircok.com\'이하 \'에어콕\')은(는) 정보통신망법 이용촉진 및 정보보호 등에 관한 법률 제 22조에 따라 다음의 개인정보 항목을 처리하고 있습니다.\n\n- 회원 항목 : 이메일(개인 맞춤형 행동대응요령 및 공공정보 서비스 제공을 목적으로 함), 비밀번호(개인 맞춤형 행동대응요령 및 공공정보 서비스 제공을 목적으로 함), 생년월일(자녀)(환경 정보 측정 시 영유아 맞춤형 기준 활용을 목적으로 함), 서비스 이용 기록 (안전한 고객 관리를 목적으로 함)\n- 위치 항목 : 위치 정보 (기기의 환경 정보 측정 정확성 증대를 목적으로 함)\n- 기기 항목 : 기기 일련번호 및 측정정보 (기기의 환경 정보 측정 정확도 증대를 목적으로 함)</string>
    <string name="terms_text5">5. 개인정보의 파기<![CDATA["<"]]>(주)이쓰리>(\'www.aircok.com\'이하 \'에어콕\')은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.\n\n -파기절차이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.-파기기한이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.</string>
    <string name="terms_text6">6. 개인정보의 안전성 확보 조치 <![CDATA["<"]]>(주)이쓰리>(\'www.aircok.com\'이하 \'에어콕\')은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.\n\n1) 정기적인 자체 감사 실시\n개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.\n\n2) 개인정보 취급 직원의 최소화 및 교육\n개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.\n\n3) 내부관리계획의 수립 및 시행\n개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.\n\n4) 해킹 등에 대비한 기술적 대책\n<![CDATA["<"]]>(주)이쓰리>(\'에어콕\')은 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.\n\n5) 개인정보의 암호화\n이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.\n\n6) 접속기록의 보관 및 위변조 방지\n개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.\n\n7) 개인정보에 대한 접근 제한\n개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.\n\n8) 문서보안을 위한 잠금장치 사용\n개인정보가 포함된 서류, 보조저장매체 등을 잠금장치가 있는 안전한 장소에 보관하고 있습니다.\n9) 비인가자에 대한 출입 통제\n개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.</string>
    <string name="terms_text7">7. 개인정보 보호책임자 작성\n\n① (주)이쓰리(\'www.aircok.com\'이하 \'에어콕\') 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.\n▶ 개인정보 보호책임자\n성명 :조흔우\n직책 :CEO\n직급 :대표이사\n연락처 :02-552-1947, hwcho@e-three.co.kr, 02-552-1948\n※ 개인정보 보호 담당부서로 연결됩니다.\n\n▶ 개인정보 보호 담당부서\n부서명 :경영지원팀\n담당자 :윤지원\n연락처 :02-552-1947, jwyoon@e-three.co.kr, 02-552-1948\n\n② 정보주체께서는 (주)이쓰리(\'www.aircok.com\'이하 \'에어콕\') 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. (주)이쓰리(\'www.aircok.com\'이하 \'에어콕\') 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.</string>
    <string name="terms_text8">8. 개인정보 처리방침 변경\n\n①이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.</string>
    <string name="terams_text9">위 약관에 동의합니다.</string>
    <string name="setting_menu0">기기연결</string>
    <string name="setting_menu1">Push 알림</string>
    <string name="setting_menu2">연속측정</string>
    <string name="setting_menu3">비밀번호 변경</string>
    <string name="setting_menu4">개인정보 취급방침</string>
    <string name="setting_menu5">Version</string>
    <string name="setting_menu6">사용자 정보</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_device_dec">아이마음s2 기기를 구매해 함께 이용해보세요.\n내 아이의 건강을 지킬 수 있습니다.</string>
    <string name="setting_device_search">연결가능기기검색</string>
    <string name="setting_device_no_connect">연결 가능한 AIRCOK 기기가 없습니다.</string>
    <string name="setting_device_search_coment2">AIRCOK 기기를 구매하셨다면\n간단한 등록 절차를 거쳐\n앱과 연결해 사용이 가능합니다.</string>
    <string name="input_now_pw">현재 비밀번호를 입력해주세요</string>
    <string name="input_confirm_pw">새 비밀번호를 입력해주세요</string>
    <string name="input_confirm_pw2">새 비밀번호를 한번 더 입력해주세요</string>
    <string name="pw_save">저장하기</string>
    <string name="forget_pw">비밀번호를 잊어버리셨나요?</string>
    <string name="to_email">입력해주신 이메일로 비밀번호 재설정 방법을 보내드립니다.</string>
    <string name="input_email_plz">이메일 주소를 입력해주세요</string>
    <string name="reset_pw">비밀번호 재설정 메일 보내기</string>
    <string name="compare_pw_0">일치하지 않습니다.</string>
    <string name="dayly">일별</string>
    <string name="monthly">월별</string>
    <string name="yearly">연별</string>
    <string name="calendar_state0">좋음</string>
    <string name="calendar_state1">보통</string>
    <string name="calendar_state2">민감군영향</string>
    <string name="calendar_state3">나쁨</string>
    <string name="calendar_state4">매우나쁨</string>
</resources>