<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.family.aircok.acfamily.login.ChangePasswordActivity"
    android:background="@drawable/bg_default">

    <include
        android:id="@+id/layout_header"
        layout="@layout/family_view_header"/>

    <RelativeLayout
        android:id="@+id/pw_change_layaout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <EditText
            android:id="@+id/input_now_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:hint="@string/input_now_pw"
            android:inputType="textPassword"
            android:paddingLeft="16dip"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textSize="18dp"
            android:background="@drawable/edittext_selector"/>

        <EditText
            android:id="@+id/input_new_pw"
            android:layout_below="@id/input_now_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            android:hint="@string/input_confirm_pw"
            android:paddingLeft="16dip"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textSize="18dp"
            android:background="@drawable/edittext_selector"/>

        <EditText
            android:id="@+id/input_new_pw2"
            android:layout_below="@id/input_new_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            android:hint="@string/input_confirm_pw2"
            android:paddingLeft="16dip"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textSize="18dp"
            android:background="@drawable/edittext_selector"/>

        <TextView
            android:id="@+id/same_password"
            android:layout_below="@id/input_new_pw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="28dp"
            android:layout_alignParentRight="true"
            android:textColor="#ff671c"
            android:text="@string/compare_pw_0"/>

        <Button
            android:id="@+id/btn_pw_save"
            android:layout_below="@id/input_new_pw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="48dp"
            android:minHeight="48dp"
            android:background="@drawable/btn_member_bg"
            android:text="@string/pw_save"
            android:textColor="#ffffff"
            android:textSize="18dp"/>

    </RelativeLayout>



</LinearLayout>
