<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="27.3dp"
        android:background="@drawable/ic_aircok_none"/>

    <TextView
        android:id="@+id/tv_device_search_coment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textSize="16dp"
        android:textColor="#1fc4ba"
        android:gravity="center_horizontal"
        android:text="@string/setting_device_no_connect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="12dp"
        android:textColor="#6f6f6f"
        android:gravity="center_horizontal"
        android:text="@string/setting_device_search_coment2" />

    <Button
        android:id="@+id/btn_none_device_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:background="@drawable/btn_member_bg"
        android:text="@string/setting_device_search"
        android:textColor="@color/white"
        android:textSize="18dp"/>
</LinearLayout>