<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/pw_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/bg_login">

        <include
            android:id="@+id/layout_header"
            layout="@layout/family_view_header"/>

        <ImageView
            android:id="@+id/pw_logo"
            android:layout_below="@id/layout_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="36dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pw_find_layout"
        android:layout_below="@id/pw_top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/forget_pw"
            android:layout_marginTop="36dp"
            android:textColor="#4b4d4e"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/to_email"
            android:layout_marginTop="62.7dp"
            android:textColor="#777f7e"
            android:textSize="12.7dp"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="132dp"
            android:hint="@string/input_email_plz"
            android:paddingLeft="16dip"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textSize="18dp"
            android:background="@drawable/edittext_selector"/>

        <Button
            android:id="@+id/btn_send_email"
            android:layout_below="@id/input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            android:gravity="center"
            android:layout_marginTop="48dp"
            android:minHeight="48dp"
            android:background="@drawable/btn_member_bg"
            android:text="@string/reset_pw"
            android:textColor="#ffffff"
            android:textSize="18dp"/>


    </RelativeLayout>

</RelativeLayout>

