<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff">

        <!--일별 월별 연별 탭-->
        <LinearLayout
            android:id="@+id/exposure_tab"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:layout_centerHorizontal="true"
            android:background="#ffffff">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/day_tab_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="onClick"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_day_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/dayly"
                    android:textSize="12dp"
                    android:textColor="#333333"/>

                <ImageView
                    android:id="@+id/day_tab_dot"
                    android:layout_below="@id/tv_day_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.7dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/depth_dot"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/month_tab_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="onClick"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_month_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/monthly"
                    android:textSize="12dp"
                    android:textColor="#a0a0a0"/>

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/month_tab_dot"
                    android:layout_below="@id/tv_month_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.7dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/depth_dot"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/year_tab_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:onClick="onClick"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_year_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/yearly"
                    android:textSize="12dp"
                    android:textColor="#a0a0a0"/>

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/year_tab_dot"
                    android:layout_below="@id/tv_year_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.7dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/depth_dot"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#f9f9f9"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="10dp"
                android:textColor="#8e8e8e"
                android:text="@string/calendar_state0"
                android:drawableTop="@drawable/graph_dot_month_good"
                android:drawablePadding="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="10dp"
                android:textColor="#8e8e8e"
                android:text="@string/calendar_state1"
                android:drawableTop="@drawable/graph_dot_month_soso"
                android:drawablePadding="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="10dp"
                android:textColor="#8e8e8e"
                android:text="@string/calendar_state2"
                android:drawableTop="@drawable/graph_dot_month_sensitive"
                android:drawablePadding="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="10dp"
                android:textColor="#8e8e8e"
                android:text="@string/calendar_state3"
                android:drawableTop="@drawable/graph_dot_month_bad"
                android:drawablePadding="2dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="10dp"
                android:textColor="#8e8e8e"
                android:text="@string/calendar_state4"
                android:drawableTop="@drawable/graph_dot_month_serious"
                android:drawablePadding="2dp"
                />
        </LinearLayout>

</LinearLayout>
